syntax = "proto3";

package auth.service.v1;

import "buf/validate/validate.proto";
import "errors/errors.proto";

// 错误码定义
enum ErrorReason {
  // 设置缺省错误码
  option (errors.default_code) = 500;
  // 用户未找到
  USER_NOT_FOUND = 0 [(errors.code) = 404];
  // 用户已存在
  USER_ALREADY_EXISTS = 1 [(errors.code) = 400];
  // 密码错误
  INCORRECT_PASSWORD = 2 [(errors.code) = 401];
  // 错误的认证信息
  INVALID_CREDENTIALS = 3 [(errors.code) = 401];
  // Token 类型错误
  INVALID_TOKEN_TYPE = 4 [(errors.code) = 400];
  // Token 已过期
  TOKEN_EXPIRED = 5 [(errors.code) = 401];
  // 没有 Token
  MISSING_TOKEN = 6 [(errors.code) = 401];
  // Token 生成失败
  TOKEN_GENERATION_FAILED = 7 [(errors.code) = 500];
  // 没有权限
  UNAUTHORIZED = 8 [(errors.code) = 403];
  // 无效的刷新Token
  INVALID_REFRESH_TOKEN = 9 [(errors.code) = 401];
}

// Auth gRPC 服务 - 纯 gRPC 接口
service AuthService {
  rpc SignupByEmail(SignupByEmailRequest) returns (SignupByEmailResponse);
  rpc LoginByEmailPassword(LoginByEmailPasswordRequest) returns (LoginByEmailPasswordResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}

// 邮箱注册请求
message SignupByEmailRequest {
  // 用户名最小长度5
  string name = 1 [(buf.validate.field).string.min_len = 5];
  // 密码最小长度5，最大长度10
  string password = 2 [(buf.validate.field).string = {
    min_len: 5
    max_len: 10
  }];
  // 确认密码最小长度5，最大长度10
  string password_confirm = 3 [(buf.validate.field).string = {
    min_len: 5
    max_len: 10
  }];
  string email = 4 [(buf.validate.field).string.email = true]; // 邮箱格式验证
}

// 邮箱注册响应
message SignupByEmailResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string role = 4;
}

// 密码登录请求
message LoginByEmailPasswordRequest {
  string email = 1;
  string password = 2 [(buf.validate.field).string = {
    min_len: 5
    max_len: 10
  }];
}

// 密码登录响应
message LoginByEmailPasswordResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3; // Access Token过期时间(秒)
}

// 刷新Token请求
message RefreshTokenRequest {
  string refresh_token = 1 [(buf.validate.field).string.min_len = 1];
}

// 刷新Token响应
message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3; // Access Token过期时间(秒)
}

// 登出请求
message LogoutRequest {
  string refresh_token = 1 [(buf.validate.field).string.min_len = 1];
}

// 登出响应
message LogoutResponse {
  bool success = 1;
}
